--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "static-site",
+  "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "##Description",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
-    // "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
