--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "license": "ISC",
+  "homepage": "https://github.com/Sasley/readme-generator",
   "dependencies": {
     "inquirer": "^8.2.4"
   }
